# ArachnoTracker

./: .gitignore  CMakeLists.txt  README.md
include/: ChorusEffect.h  Effect.h  Instrument.h  Note.h  Pattern.h  PatternRow.h  PatternStep.h  ReverbEffect.h  Tracker.h
src/: JuceHeader.h  main.cpp
src/core/: Effect.cpp  Instrument.cpp  Note.cpp  Pattern.cpp  PatternRow.cpp  PatternStep.cpp  Tracker.cpp
